@@ -2322,6 +2322,65 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// Verify newly added ez is present after restarting the NameNode
+comment|// without persisting the namespace.
+name|Path
+name|nonpersistZone
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/nonpersistZone"
+argument_list|)
+decl_stmt|;
+name|fsWrapper
+operator|.
+name|mkdir
+argument_list|(
+name|nonpersistZone
+argument_list|,
+name|FsPermission
+operator|.
+name|getDirDefault
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|dfsAdmin
+operator|.
+name|createEncryptionZone
+argument_list|(
+name|nonpersistZone
+argument_list|,
+name|TEST_KEY
+argument_list|)
+expr_stmt|;
+name|numZones
+operator|++
+expr_stmt|;
+name|cluster
+operator|.
+name|restartNameNode
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertNumZones
+argument_list|(
+name|numZones
+argument_list|)
+expr_stmt|;
+name|assertZonePresent
+argument_list|(
+literal|null
+argument_list|,
+name|nonpersistZone
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Test listing encryption zones as a non super user.    */
 annotation|@
